@@ -1,4 +1,4 @@
 [pytest]
-minversion = 2.8
+minversion = 3.1.0
 markers =
     dependency: mark dependencies between tests.
