@@ -9,6 +9,8 @@
 
  + Issue #50: Fix a compatibility issue with upcoming Python 3.8.
 
+ + Issue #51: Fix a compatibility issue with pytest 4.1.0 in the tests.
+
 * Version 0.14.2 (2018-10-25)
 
 ** Bug fixes and minor changes
